[package]
name = "ntree-macros"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Complementary proc macros for ntree-rs"
repository = "https://github.com/HectorMRC/ntree-rs"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.28"
syn = "2.0.18"

[dev-dependencies]
ntree-rs = { path = "../ntree" }
