[package]
name = "ntree-rs"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A mutable n-tree with async support"
readme = "../README.md"
repository = "https://github.com/HectorMRC/ntree-rs"

[dependencies]
async-recursion = { version = "1.0.4", optional = true }
futures = { version = "0.3.28", optional = true }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["async"]
async = ["async-recursion", "futures"]
