[package]
name = "vector-graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntree-macros = { path = "../ntree-macros" }
ntree-rs = { path = "../ntree", features = ["async"] }
serde = "1.0.164"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
